--- a/Styles/style.css
+++ b/Styles/style.css
@@ -20,20 +20,16 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 30px 100px;
+    padding: 5px 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 10000;
 }
 
-header .logo {
-    color: #fff;
-    font-weight: 700;
-    text-decoration: none;
-    font-size: 2em;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+header .logo img{
+ height: 100px;
+ width: 100px;
 }
 
 header ul {
